# petstore-api

./: .env.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  allurerc.advanced.yml  allurerc.yml  docker-compose.postgres.yml  docker-compose.staging.yml  docker-compose.yml  fly.toml  index.html  mkdocs.yml  pyproject.toml  requirements-runtime.txt  run_allure.py
.fly/dev/: fly.toml
.fly/staging/: fly.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy-dev.yml  deploy-eks-dev.yml  deploy-fly-dev.yml  deploy-fly-pr.yaml  deploy-fly-pr.yml  deploy-fly-review.yaml  deploy-fly-staging.yml  deploy-prod.yml  deploy-staging.yml  publish-docs.yml  push-ecr.yml  push-ghcr.yml  release.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: deps.py
app/auth/: __init__.py  dev_jwt.py  dev_store.py  supabase_jwt.py
app/db/: session.py
app/fixtures/: __init__.py  datasets.py  loader.py
app/middleware/: auth.py  correlation_id.py  delay_injection.py  failure_injection.py  rate_limit.py
app/models/: __init__.py  order.py  pet.py  user.py
app/repositories/: base.py
app/schemas/: __init__.py  auth.py  order.py  pet.py  user.py
app/services/: __init__.py  order.py  pet.py  user.py
ci/: index.html  summary.json
ci/.allure/: allure-history.jsonl
ci/awesome/: index.html  summary.json
ci/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
ci/export/: influxDbData.txt  prometheusData.txt
ci/history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
ci/widgets/: allure_environment.json  categories-trend.json  categories.json  charts.json  duration-trend.json  duration.json  environment.json  executors.json  history-trend.json  nav.json  pie_chart.json  retry-trend.json  search-index.json  severity.json  statistic.json  status-chart.json  suites.json  summary.json  timeline.json  tree-filters.json  tree.json
docs/: 404.html  allure-history-design.md  allure-quick-reference.md  api-reference.md  architecture.md  badges.md  changelog.md  configuration.md  deployment.md  e2e-coverage.md  e2e-docker-coverage.md  getting-started.md  index.html  index.md  objects.inv  rate-limiting.md  sitemap.xml  testing.md
docs/allure-history-design/: index.html
docs/allure-quick-reference/: index.html
docs/api-reference/: index.html
docs/architecture/: index.html
docs/auth/: dev-auth.md
docs/badges/: index.html
docs/changelog/: index.html
docs/configuration/: index.html
docs/deployment/: index.html
docs/e2e-coverage/: index.html
docs/getting-started/: index.html
docs/rate-limiting/: index.html
docs/search/: search_index.json
docs/testing/: index.html
helm/petstore-api/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
performance/: conftest.py  run_benchmarks.sh  test_benchmark_pets.py
petstore_core/: __init__.py  config.py  errors.py
petstore_core/models/: __init__.py  order.py
petstore_core/schemas/: health.py  order.py  pet.py
petstore_core/services/: order.py
pkg/: pyproject.toml
pkg/petstore_core/: config.py
pkg/petstore_core/db/: session.py
pkg/petstore_core/models/: order.py  pet.py  user.py
pkg/petstore_core/repositories/: base.py
pkg/petstore_core/repositories/memory/: __init__.py  order.py  pet.py  user.py
pkg/petstore_core/repositories/postgres/: __init__.py  pet.py  user.py
pkg/petstore_core/schemas/: __init__.py  auth.py  pet.py  user.py
pkg/petstore_core/services/: __init__.py  pet.py  user.py
scripts/: load_fixtures.py  run_allure.py
tests/: conftest.py
tests/auth/: test_dev_auth.py
tests/e2e/: conftest.py  docker-compose.e2e.yml  test_petstore_e2e.py
tests/factories/: __init__.py  order.py  pet.py  user.py
tests/integration/: conftest.py  test_dev_auth_api.py  test_pet_api.py  test_rate_limiting.py  test_store_api.py  (+1 more)
(+5283 files in other folders)
