[project]
name = "petstore-api"
dynamic = ["version"]
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy[asyncio]>=2.0.49",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "structlog>=24.2.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=5.0.0",
  "allure-pytest>=2.13.0",
  "faker>=40.18.0",
  "factory-boy>=3.3.3",
  "testcontainers[postgres]>=4.7.0",
  "mypy>=1.10.0",
  "ruff>=0.4.0",
  "black>=24.4.0",
  "pre-commit>=3.7.0",
  "anyio>=4.4.0",
]
perf = [
  "pytest-benchmark>=4.0.0",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pymdown-extensions"
]
cli = [
    "typer[all]>=0.12.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v(?P<version>.*)"

[tool.hatch.version.raw-options]
# Use exact tag versions (instead of next-dev guessing) so package versions
# match release tags directly during tag-driven releases.
version_scheme = "no-guess-dev"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--junitxml=junit.xml"
testpaths = ["tests"]
markers = [
  "memory_only: tests intended for in-memory app/repository execution",
  "remote_only: tests intended for deployed/live instances via TEST_BASE_URL or E2E_BASE_URL",
  "backend_agnostic: tests expected to pass on both memory and remote backends",
]

[tool.coverage.run]
source = ["app"]
omit = [
  "app/db/migrations/*",
  "app/db/session.py",
  "app/models/*",
  "app/repositories/postgres/*",
  "**/__init__.py",
]

[tool.coverage.report]
fail_under = 80

[tool.black]
line-length = 100
target-version = ["py314"]

