[project]
name = "petstore-core"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.11.0",
  "pydantic-settings>=2.14.1",
  "sqlalchemy[asyncio]>=2.0.49",
  "asyncpg>=0.31.0",
  "structlog>=24.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["petstore_core"]
